# cpp-lua-engine

./: CMakeLists.txt  README.md
Scripts/: vector.lua
Scripts/Behaviours/: player.lua
Scripts/Scenes/: main_scene.lua
include/: Engine.hpp  Input.hpp  Resources.hpp  Scene.hpp
include/Components/: Behaviour.hpp  Components.hpp  Sprite.hpp  Transform.hpp
include/Dev/: LuaUtils.hpp
include/Systems/: Behaviour.hpp  Collision.hpp  System.hpp  Systems.hpp
libs/lua/: CMakeLists.txt
src/: Engine.cpp  Input.cpp  Resources.cpp  Scene.cpp  main.cpp
